# stm32demo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  lbuild.xml
cmake/: GenGitInfo.cmake
src/: build_metadata.cc  log_backend.cc  log_tokenized_handler.cc  main.cpp
src/pw_assert_backend/: assert_backend.cc  assert_backend.h
toolchain/: arm-clang.cmake  arm-none-eabi.cmake
tools/: read_build_meta.py
